--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babelify": "^10.0.0",
@@ -39,6 +40,9 @@
           "presets": [
             "@babel/preset-env",
             "@babel/preset-react"
+          ],
+          "plugins": [
+            "@babel/plugin-proposal-class-properties"
           ]
         }
       ]
